CRANKSカード微調整 & FAQ余白調整

--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
                                 芦沢 哲也<br /><span class="b-creatorCranks__boxName--en">Ashizawa Tetsuya</span>
                               </dt>
                               <dd class="b-creatorCranks__boxStatus">代表取締役社長</dd>
-                              <dd class="b-creatorCranks__boxJob">Webクリエイター/プログラマー</dd>
+                              <dd class="b-creatorCranks__boxJob">Webクリエイター<span>/</span><br>プログラマー</dd>
                             </dl>
                           </div>
                           <div class="b-creatorCranks__cardItem">
@@ -707,7 +707,7 @@
                                 <span class="b-creatorCranks__boxName--en">Ogino Hiroyuki</span>
                               </dt>
                               <dd class="b-creatorCranks__boxStatus">代表取締役副社長</dd>
-                              <dd class="b-creatorCranks__boxJob">Webクリエイター/UIデザイナー</dd>
+                              <dd class="b-creatorCranks__boxJob">Webクリエイター<span>/</span><br>UIデザイナー</dd>
                             </dl>
                           </div>
                         </div>
