--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
               <div class="l-L01">
                 <div class="l-L02">
                   <h2 class="b-heading__title">
-                    <span class="emphasis icon icon--purple">所属クリエイター</span><br>について
+                    <span class="emphasis icon icon--purple">所属クリエイター</span><br />について
                   </h2>
                 </div>
                 <div class="l-L03">
@@ -696,7 +696,7 @@
                                 芦沢 哲也<br /><span class="b-creatorCranks__boxName--en">Ashizawa Tetsuya</span>
                               </dt>
                               <dd class="b-creatorCranks__boxStatus">代表取締役社長</dd>
-                              <dd class="b-creatorCranks__boxJob">Webクリエイター<span>/</span><br>プログラマー</dd>
+                              <dd class="b-creatorCranks__boxJob">Webクリエイター<span>/</span><br />プログラマー</dd>
                             </dl>
                           </div>
                           <div class="b-creatorCranks__cardItem">
@@ -707,7 +707,7 @@
                                 <span class="b-creatorCranks__boxName--en">Ogino Hiroyuki</span>
                               </dt>
                               <dd class="b-creatorCranks__boxStatus">代表取締役副社長</dd>
-                              <dd class="b-creatorCranks__boxJob">Webクリエイター<span>/</span><br>UIデザイナー</dd>
+                              <dd class="b-creatorCranks__boxJob">Webクリエイター<span>/</span><br />UIデザイナー</dd>
                             </dl>
                           </div>
                         </div>
@@ -858,7 +858,7 @@
             </div>
             <div class="l-L04">
               <div class="l-L05">
-                <div class="b-logo">
+                <div class="b-footerLogo">
                   <a href="index.html">SLashNext</a>
                 </div>
               </div>
