--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <meta property="og:url" content="https://itohiroka.github.io/epic-sam/" />
     <meta property="og:site_name" content="SLashNext" />
-    <meta property="og:image" content="img/ogp.png" />
+    <meta property="og:image" content="https://itohiroka.github.io/epic-sam/img/ogp.png" />
     <!-- css --------------------------------------------------------------------------->
     <link rel="stylesheet" href="css/style.css" />
     <!-- script --------------------------------------------------------------------------->
@@ -370,7 +370,9 @@
                 <div class="l-L07">
                   <div class="b-boxFlame__shift b-boxFlame__shift--blue">
                     <img class="b-image" src="img/difference.png" alt="" />
-                    <p class="b-differenceDiagram__subText">※「一般的な制作会社の平均価格」は、2022年11月に5社から5ページ構成のWebサイトの見積もりをいただいた金額の平均値です</p>
+                    <p class="b-differenceDiagram__subText">
+                      ※「一般的な制作会社の平均価格」は、2022年11月に5社から5ページ構成のWebサイトの見積もりをいただいた金額の平均値です
+                    </p>
                   </div>
                 </div>
                 <div class="l-L08">
