--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="noindex, nofollow" />
     <title>SLashNext|高品質で低価格なWebサイト制作サービス</title>
     <!-- ファビコン -->
     <link rel="icon" href="favicon.ico" />
